.aws/cloudformation/security-groups.yml
AWSTemplateFormatVersion: '2010-09-09'

Description: Symeo API - Creation of all SecurityGroups

Parameters:
  VpcId:
    Description: VPC ID
    Type: AWS::EC2::VPC::Id

  Env:
    Description: The environment name deployed
    Type: String
    Default: staging

Resources:
  SymeoApiSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub symeo-api-sg-${Env}
      GroupDescription: symeo-api-sg
      SecurityGroupIngress:
      -
        IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        SourceSecurityGroupId: !Ref SymeoApiAlbSg
      -
        IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: symeo-api-sg
      VpcId: !Ref VpcId
  SymeoApiAlbSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub symeo-api-alb-sg-${Env}
      GroupDescription: symeo-api-alb-sg
      SecurityGroupIngress:
      -
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      -
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIpv6: ::/0
      -
        IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      -
        IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIpv6: ::/0
      Tags:
      - Key: Name
        Value: symeo-api-alb-sg
      VpcId: !Ref VpcId
  SymeoApiDatabaseSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub symeo-api-db-sg-${Env}
      GroupDescription: symeo-api-db-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIpv6: ::/0
      VpcId: !Ref VpcId

Outputs:
  SymeoApiSg:
    Value: !Ref SymeoApiSg
  SymeoApiAlbSg:
    Value: !Ref SymeoApiAlbSg
  SymeoApiDatabaseSg:
    Value: !Ref SymeoApiDatabaseSg
